...
    );
  }

  getBikeFormItem = () => {
    if (this.fixedBike) {
      return (
        <View style={styles.formItemColumn} testID="FixedBikeText">
          <Text style={styles.formItemHeaderText}>Bike: </Text>
          <Text style={styles.fixedItemText}>{this.fixedBike.title}</Text>
        </View>
      );
    } else {
      return (
...
    }
  };

  getComponentFormItem = () => {
    if (this.fixedComponent) {
      return (
        <View style={styles.formItemColumn} testID="FixedComponentText">
          <Text style={styles.formItemHeaderText}>Component: </Text>
          <Text style={styles.fixedItemText}>{this.fixedComponent.title}</Text>
        </View>
      );
    } else {
      return (
...
      errorText = 'Please select a bike.';
    } else if (!this.fixedComponent && componentId == null) {
      errorText = 'Please select a component.';
    } else if (taskType == null) {
      errorText = 'Please select a task type (distance or time).';
    } else if (threshold == null) {
      errorText = 'Please enter a threshold.';
    } else if (threshold < 0) {
      errorText = 'Threshold cannot be negative.';
    } else if (description == null) {
      errorText = 'Please enter a task title.';
    }

...
    });
  };

  render() {
    return (
      // NOTE: fix bike and component fields when entering from component task screen
      <ScrollView containerStyle={styles.formContainer} testID="AddTaskScreen">
        {this.getBikeFormItem()}
        {this.getComponentFormItem()}
        <View style={styles.formItemColumn}>
          <Text style={styles.formItemHeaderText}>Title:</Text>
          {this.getTextInput(
            this.setTaskTitle,
            false,
            this.state.description,
            'TitleTextInput',
          )}
        </View>
        <View style={styles.formItemColumn}>
          <Text style={styles.formItemHeaderText}>Type:</Text>
          {this.getDropDownPicker(
            TASK_TYPE_DATA,
...
              Time Until Task (Days):
            </Text>
            {this.getTextInput(
              this.setTaskThreshold,
              true,
              this.state.threshold ? this.state.threshold.toString() : null,
              'ThresholdTextInput',
            )}
          </View>
        ) : null}
        {this.state.taskType === TASK_TYPES.DISTANCE ? (
          <View style={styles.formItemColumn}>
            <Text style={styles.formItemHeaderText}>
...
          <Text style={styles.formItemHeaderText}>Repeating?</Text>
          <CheckBox
            style={{marginLeft: 8}}
            value={this.state.isRepeating}
            onValueChange={this.setRepeatOption}
            tintColors={{true: Colors.accentBlue}}
            testID="RepeatBtn"
          />
        </View>
        <View style={styles.buttonContainer}>
          <TouchableOpacity
            onPress={this.cancel}
            style={styles.cancelButton}
            testID="CancelTaskBtn">
            <Text style={styles.addTaskText}>Cancel</Text>
          </TouchableOpacity>
          {!this.state.isSaving ? (
            <TouchableOpacity
              onPress={this.save}
              style={styles.saveButton}
              testID="SaveTaskBtn">
              <Text style={styles.addTaskText}>Save</Text>
            </TouchableOpacity>
          ) : (
            <ActivityIndicator size="large" color={Colors.accentBlue} />
          )}
        </View>
...
